# sfrun

./: README.md  flake.nix  pyproject.toml  sfrun.nix  sqlexp.nix
sfrun/: __init__.py  batch.py  df.py  main.py  runner.py  sql.py  util.py
sfrun/formats/: __init__.py  csv.py  fmt.py  json.py  jsonl.py  md.py  raw.py  xls.py
sqlexp/: __init__.py  csv.py  fmt.py  main.py  md.py  xls.py
tests/: conftest.py  sample.py  test_df.py  test_error_log.py  test_limit.py  test_multiple.py  test_on_error.py  test_python.py  test_sql.py  test_sqlrunner.py
