[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlexp"
authors = [
    {name = "Paresh Adhia", email = "padhia+github@gmail.com"},
]
description = "Snowflake SQL pretty printer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "sfconn==0.3.1rc2",
    "yappt==0.3.2rc1",
    "snowflake-snowpark-python",
    "openpyxl"
]
dynamic = ["version"]

[project.scripts]
sqlexp = "sqlexp.main:cli"

[tool.setuptools.dynamic]
version = {attr = "sqlexp.main.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 130
extend-select = ["I"]

[tool.pytest.ini_options]
pythonpath = [ "." ]
